--- a/css/projects.css
+++ b/css/projects.css
@@ -1,6 +1,6 @@
 .image-container {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   gap: 10px; /* Adds space between images */
   padding: 10px; /* Adds padding around the container */
 }
